tests/neg/classOf.check
-- [E170] Type Error: tests/neg/classOf.scala:6:22 ---------------------------------------------------------------------
6 |  def f1[T] = classOf[T] // error
  |                      ^
  |                      T is not a class type
  |
  | longer explanation available when compiling with `-explain`
-- [E170] Type Error: tests/neg/classOf.scala:7:32 ---------------------------------------------------------------------
7 |  def f2[T <: String] = classOf[T] // error
  |                                ^
  |                                T is not a class type
  |
  |                                where:    T is a type in method f2 with bounds <: String
  |
  | longer explanation available when compiling with `-explain`
-- [E170] Type Error: tests/neg/classOf.scala:9:18 ---------------------------------------------------------------------
9 |  val y = classOf[C { type I = String }] // error
  |                  ^^^^^^^^^^^^^^^^^^^^^
  |                  Test.C{type I = String} is not a class type
  |
  | longer explanation available when compiling with `-explain`
